--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,21 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.2.1",
+        "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
         "classnames": "^2.3.2",
+        "dotenv": "^16.3.1",
         "firebase": "^9.15.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.45.1",
         "react-icons": "^4.7.1",
         "react-router-bootstrap": "^0.26.2",
         "react-router-dom": "^6.4.3",
         "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.3",
         "sweetalert2": "^11.7.3",
         "web-vitals": "^2.1.4"
     },
